--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <title>Omez</title>
+    <link rel="icon" href="/public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="theme-color" content="#5225b2" />
+    <meta
+        name="description"
+        content="Dr. Reddy's Laboratories, a leading multinational pharmaceutical company based in India and overseas, committed to providing affordable and innovative medicines for healthier lives."
+    />
+    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="manifest" href="/manifest.json" />
   </head>
   <body>
     <div id="root" style="width: 100%;height: 100%;overflow: hidden;"></div>
