--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <title>Omez</title>
+    <title>OMEZ</title>
     <link rel="icon" href="/public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#5225b2" />
     <meta
         name="description"
         content="Dr. Reddy's Laboratories, a leading multinational pharmaceutical company based in India and overseas, committed to providing affordable and innovative medicines for healthier lives."
